# slack-bot-notion-rag

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md
scripts/: bootstrap_vectors.py  setup_with_uv.sh
src/slack_bot_notion_rag/: __init__.py  config.py  main.py  notion_sync.py  slack_app.py
src/slack_bot_notion_rag/rag_pipeline/: __init__.py  llm.py  retriever.py  vector_store.py
tests/: test_sanity.py
