[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-bot-notion-rag"
version = "0.1.0"
description = "Slack bot with Notion-based RAG answering for lab onboarding and knowledge sharing"
readme = "README.md"
authors = [{ name = "Lab AI Team" }]
requires-python = ">=3.10"
dependencies = [
    "slack-bolt>=1.18.1",
    "langchain>=0.2.10",
    "langchain-openai>=0.1.9",
    "langchain-community>=0.2.9",
    "chromadb>=0.5.4",
    "notion-client>=2.2.1",
    "pydantic>=2.7.4",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "black>=24.4.2",
    "ruff>=0.5.1",
    "mypy>=1.10.0",
]

[project.scripts]
slack-bot-notion-rag = "slack_bot_notion_rag.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
